# anki-markdown-importer

./: .gitignore  README.md  main.py  prueba_anki.py  pyproject.toml  test_main.py
tests/: test_anki_integration.py  test_main.py
tests/test_notes/: linked_note.md  not_included_note.md  root_note.md  sample_math_note.md
