[project]
name = "obsidian-to-anki-individual"
version = "1.3.0"
description = "Tool to convert Markdown files into Anki flashcards using AnkiConnect. Automates the creation of flashcard decks from Markdown content."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "icecream>=2.1.5",
    "loguru>=0.7.3",
    "markdown-it-py>=4.0.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.4",
]
